--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,6 @@ resilience4j.circuitbreaker.instances.default.failure-rate-threshold=50
 resilience4j.circuitbreaker.instances.default.wait-duration-in-open-state=10000ms
 resilience4j.circuitbreaker.instances.default.automatic-transition-from-open-to-half-open-enabled=true
 
-resilience4j.retry.instances.default.max-retry-attempts=3
+resilience4j.retry.instances.default.maxAttempts=3
 resilience4j.retry.instances.default.wait-duration=2000
 resilience4j.retry.instances.default.retry-exceptions=java.io.IOException
